Changed inputType in activity_main layout to 'time'.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
+        android:inputType="time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,6 +25,7 @@
         android:id="@+id/monday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
@@ -35,6 +37,7 @@
         android:id="@+id/tuesday_start_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +47,7 @@
         android:id="@+id/tuesday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
         app:layout_constraintStart_toEndOf="@+id/tuesday_start_edittext"
@@ -53,6 +57,7 @@
         android:id="@+id/wednesday_start_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +67,7 @@
         android:id="@+id/wednesday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +79,7 @@
         android:id="@+id/thursday_start_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +89,7 @@
         android:id="@+id/thursday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
         app:layout_constraintStart_toEndOf="@+id/thursday_start_edittext"
@@ -91,6 +99,7 @@
         android:id="@+id/friday_start_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,6 +109,7 @@
         android:id="@+id/friday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
         app:layout_constraintStart_toEndOf="@+id/friday_start_edittext"
