--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         android:inputType="time"
+        android:hint="@string/start_hint"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,6 +27,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/end_hint"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
@@ -38,6 +40,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/start_hint"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +51,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/end_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
         app:layout_constraintStart_toEndOf="@+id/tuesday_start_edittext"
@@ -58,6 +62,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/start_hint"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +73,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/end_hint"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,6 +86,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/start_hint"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +97,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/end_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
         app:layout_constraintStart_toEndOf="@+id/thursday_start_edittext"
@@ -100,6 +108,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/start_hint"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +119,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:inputType="time"
+        android:hint="@string/end_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
         app:layout_constraintStart_toEndOf="@+id/friday_start_edittext"
@@ -244,10 +254,12 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="date"
+        android:hint="@string/date_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.649"
         app:layout_constraintStart_toEndOf="@+id/date_textview"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
 
     <!-- Monday - Sunday labels -->
