--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -310,7 +310,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <com.example.javatimescheduler.Date
         android:id="@+id/date_edittext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
