--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -178,7 +178,8 @@
         android:text="@string/save_button_label"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="showPopupMenuSave"/>
 
     <Button
         android:id="@+id/close_button"
@@ -205,7 +206,8 @@
         android:text="@string/load_button_label"
         app:layout_constraintBottom_toTopOf="@+id/save_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="showPopupMenuLoad"/>
 
 
     <!-- TextView for Monday - Friday to display each day's name as a label. -->
